feat: add Monte Carlo Pi dashboard mode
- add new MonteCarloPiMode visualization
- sync dashboard badge with actual QRNG/PSEUDO provider mode
- refresh badge state on toggle and pause
- fix VisualizationModeRegistryTest mode id
- clean up IDE warnings in MonteCarloPiMode